--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,5 +2,18 @@
 
 <form action="/posts" method="post">
   <%# add form fields %>
+    <p>
+    <label for="author">Author</label>
+    <input type="text" name="author" id="author">
+    </p>
+    <p>
+    <label for="body">body</label>
+    <input type="text" name="body">
+    <p>
+    
+    </p>
+    <label for="image URL">Image</label>
+    <input type="text" name="image">
+  </p>
   <button>Submit</button>
 </form>
